<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="about_activity_label">About ALC</string>
    <string name="profile_activity_label">My Profile</string>
    <string name="welcom">Welcom To ALC 4.0</string>
    <string name="about">About ALC</string>
    <string name="profile">My profile</string>

    <string name="track">TRACK Android</string>
    <string name="country">COUNTRY Tanzania</string>
    <string name="email">EMAIL adamreuben@gmail.com</string>
    <string name="phoneNo">PHONE NUMBER +255757479246</string>
    <string name="slack_name">SLACK USERNAME @Macode</string>

    <string name="url">https://andela.com/alc/</string>


</resources>
