<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomAlc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcom"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <Button
        android:id="@+id/myProfileBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_dimension"
        android:layout_marginLeft="@dimen/margin_dimension"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="@dimen/margin_dimension"
        android:layout_marginRight="@dimen/margin_dimension"
        android:background="@color/button_color"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomAlc" />

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_dimension"
        android:layout_marginLeft="@dimen/margin_dimension"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="@dimen/margin_dimension"
        android:layout_marginRight="@dimen/margin_dimension"
        android:background="@color/button_color"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myProfileBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>